--- a/railties/guides/source/api_documentation_guidelines.textile
+++ b/railties/guides/source/api_documentation_guidelines.textile
@@ -67,7 +67,7 @@ On the other hand, big chunks of structured documentation may have a separate "E
 The result of expressions follow them and are introduced by "# => ", vertically aligned:
 
 <ruby>
-# For checking if a fixnum is even or odd.
+# For checking if a Integer is even or odd.
 #
 #   1.even? # => false
 #   1.odd?  # => true
